Rework dependency graph to be more efficient (#6360)
* Rework dependency graph to be more efficient

* Correct ascii representation of the dependency graph

* Fix failing tests

* Address code review comment

* Address review comments

* Add DependencyTreeWalker abstraction (#6363)

* Add `DependencyTreeWalker`

Should make it simpler to add other uses.

* Polish

* Use pre-order rather than post-order

* Avoid re-traversing already evaluated sub-paths

---------

Co-authored-by: Sam Snyder <sam@moderne.io>

* Remove the caching of duplicate sub-paths from DependencyTreeWalker. Since ResolvedDependency has that obnoxious depth field the caching could lead to subtle bugs

* Fix comment positioning not being maintained when inserting dependencies via comparator

---------

Co-authored-by: Knut Wannheden <knut@moderne.io>
Co-authored-by: Sam Snyder <sam@moderne.io>